<?xml version="1.0"?>
<package format="2">
  <name>vision_info_server</name>
  <version>0.0.0</version>
  <description>The vision_info_server package</description>

  <maintainer email="masaya.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>vision_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
