<?xml version="1.0"?>
<package format="3">
  <name>vision_info_server</name>
  <version>0.0.0</version>
  <description>The vision_info_server package</description>

  <maintainer email="masaya.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>lifecycle_msgs</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>rclcpp_lifecycle</build_export_depend>
  <build_export_depend>lifecycle_msgs</build_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>rosdoc_lite</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
